# wasm-bindeps

./: Cargo.toml  README.md
components/: Cargo.toml
components/src/: adder.rs
runner/: Cargo.toml  build.rs
runner/src/: lib.rs
wit/adder/: world.wit
