[workspace]
members = ["components", "runner"]
resolver = "3"


[workspace.package]
edition = "2024"
version = "0.1.0"
[workspace.dependencies]
components = { path = "components" }


wasmtime = "43.0"
wasmtime-wasi = "43.0"
wit-bindgen = { version = "0.57.1" }
wit-component = { version = "0.247.0" }
